--- a/rigbarth.vcxproj.filters
+++ b/rigbarth.vcxproj.filters
@@ -1,90 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="utils\string.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="user\main.cpp">
-      <Filter>user</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="framework\dllmain.cpp">
-      <Filter>framework</Filter>
-    </ClCompile>
-    <ClCompile Include="framework\helpers.cpp">
-      <Filter>framework</Filter>
-    </ClCompile>
-    <ClCompile Include="framework\il2cpp-init.cpp">
-      <Filter>framework</Filter>
+    <ClCompile Include="user\debugMenu.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="framework\pch-il2cpp.cpp">
-      <Filter>framework</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="utils\string.cpp">
-      <Filter>utils</Filter>
+    <ClCompile Include="framework\il2cpp-init.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="framework\dllmain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="framework\helpers.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="user\hooks\advScript.cpp">
-      <Filter>user\hooks</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="user\hooks\conditionsForLoverJudgment.cpp">
-      <Filter>user\hooks</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="kiero\kiero.cpp">
+      <Filter>kiero</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="user\debugMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="user\main.h">
-      <Filter>user</Filter>
-    </ClInclude>
-    <ClInclude Include="appdata\il2cpp-api-functions.h">
-      <Filter>appdata</Filter>
-    </ClInclude>
-    <ClInclude Include="appdata\il2cpp-api-functions-ptr.h">
-      <Filter>appdata</Filter>
-    </ClInclude>
-    <ClInclude Include="appdata\il2cpp-functions.h">
-      <Filter>appdata</Filter>
-    </ClInclude>
-    <ClInclude Include="appdata\il2cpp-metadata-version.h">
-      <Filter>appdata</Filter>
-    </ClInclude>
-    <ClInclude Include="appdata\il2cpp-types.h">
-      <Filter>appdata</Filter>
-    </ClInclude>
-    <ClInclude Include="appdata\il2cpp-types-ptr.h">
-      <Filter>appdata</Filter>
-    </ClInclude>
-    <ClInclude Include="framework\helpers.h">
-      <Filter>framework</Filter>
-    </ClInclude>
-    <ClInclude Include="framework\il2cpp-appdata.h">
-      <Filter>framework</Filter>
-    </ClInclude>
-    <ClInclude Include="framework\il2cpp-init.h">
-      <Filter>framework</Filter>
-    </ClInclude>
-    <ClInclude Include="framework\pch-il2cpp.h">
-      <Filter>framework</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utils\utils.h">
-      <Filter>utils</Filter>
-    </ClInclude>
-    <ClInclude Include="user\hooks\hooks.h">
-      <Filter>user\hooks</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="user\hooks\advScript.h">
-      <Filter>user\hooks</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="user\hooks\hooks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="framework\pch-il2cpp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="framework\il2cpp-init.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="framework\il2cpp-appdata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="framework\helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="appdata\il2cpp-api-functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="appdata\il2cpp-api-functions-ptr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="appdata\il2cpp-functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="appdata\il2cpp-metadata-version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="appdata\il2cpp-types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="appdata\il2cpp-types-ptr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kiero\kiero.h">
+      <Filter>kiero</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="appdata">
-      <UniqueIdentifier>{99e920e2-880c-4e10-84e4-375b1939091b}</UniqueIdentifier>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{753850c9-99f0-4081-95d6-b9cfe0acff5a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="framework">
-      <UniqueIdentifier>{13c76df5-c04f-47fd-97f6-9ceda19d1760}</UniqueIdentifier>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{63c303d5-7615-4916-9fff-e81982182321}</UniqueIdentifier>
     </Filter>
-    <Filter Include="user">
-      <UniqueIdentifier>{aab7e1fd-06b0-4022-b5b0-f089612de3c4}</UniqueIdentifier>
+    <Filter Include="kiero">
+      <UniqueIdentifier>{1edf06b7-73f6-414e-b339-bb2692760d4e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="utils">
-      <UniqueIdentifier>{8682bd30-3ca5-4ccb-a052-a5ddcca3478f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="user\hooks">
-      <UniqueIdentifier>{caa11e9a-cf1e-4f1a-808f-c64c11a289ad}</UniqueIdentifier>
+    <Filter Include="test">
+      <UniqueIdentifier>{5442a964-daf3-4f54-a20c-d4718402f82f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
